k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-epouvante
spec:
  replicas: 1
  strategy:
    type: Recreate  # <--- AJOUTE CECI : Coupe l'ancien pod avant de lancer le nouveau
  selector:
    matchLabels:
      app: backend-api
  template:
    metadata:
      labels:
        app: backend-api
    spec:
      containers:
      - name: backend-node
        image: monregistreepouvante.azurecr.io/backend:v12
        ports:
        - containerPort: 5000
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "256Mi"
            cpu: "200m"
