k8s/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bazar-web
  labels:
    app: bazar-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bazar-web
  template:
    metadata:
      labels:
        app: bazar-web
    spec:
      containers:
        - name: bazar-web
          image: europe-west9-docker.pkg.dev/project-6ead5f33-15fd-443c-817/bazar-api-repo/bazar-web:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "300m"
              memory: "256Mi"
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: bazar-web
spec:
  type: ClusterIP
  selector:
    app: bazar-web
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
