k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-epouvante
spec:
  type: LoadBalancer
  selector:
    app: backend-epouvante
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
